<resources>
    <string name="app_name">Nested Fragment</string>
    <string name="heading">Three Fragments in One Activity</string>
    <string name="fragment1_nested_button">First Nested Fragment</string>
    <string name="fragment2_nested_button">Second Nested Fragment</string>
    <string name="fragment1_button">First Fragment</string>
    <string name="fragment2_button">Second Fragment</string>
    <string name="fragment3_button">Third Fragment</string>
    <string name="fragment4_button">Four Fragment</string>
    <string name="fragment5_button">Five Fragment</string>
    <string name="fragment6_button">Six Fragment</string>
    <string name="fragment1_text1">Displaying contents of the First Fragment</string>
    <string name="fragment2_text1">Displaying contents of the Second Fragment</string>
    <string name="fragment3_text1">Displaying contents of the Third Fragment</string>
    <string name="fragment4_text1">Displaying contents of the Four Fragment</string>
    <string name="fragment5_text1">Displaying contents of the Five Fragment</string>
    <string name="fragment6_text1">Displaying contents of the Six Fragment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
